Changes in ??
= =============
2008-11-11 Craig Small
	* Updated Indonesian PO file

2008-08-09 Craig Small
	* peekfd off by one problem in fds Debian #460530

2007-11-19 Craig Small
	* Patch from Marcus Watts for better comm handling in pstree
	* Updated Hungarian po file

2007-11-13 Craig Small
	* Updated French and German po files
	* Fuser -m detects more open sockets SF patch #1728412 Thnks marienz

2007-11-07 Craig Small
	* Updated Italian, Chinese simplified, Dutch, Swedish and Polish po files
	* Removed old fuser

Changes in 22.6
===============
2007-08-09 Craig Small
	* killall.1 mentions you can use -SIGxxx as well as just -XXX for signal
	  Debian #431082

2007-07-04 Tomas Smetana
	* Added support for PPC architecture for peekfd

2007-06-25 Craig Small
	* Updated the Chinese simplified po file

2007-06-21 Tomas Smetana
	* Added support for x86_64 architecture for peekfd

2007-06-13 Craig Small
	* Added Chinese simplified po file

2007-05-31 Craig Small
	* Updated Dutch, Vietnamese, Polish and Italian translations
	* Patch for peekfd from Benno Schulenberg

2007-04-30 Craig Small
	* Fixed up NLS for fuser, patch from Benno Schulenberg
	* killall asks for Signal (procname) if not SIGTERM

Changes in 22.5
===============
2007-04-18 Craig Small
	* Conditonally compile peekfd if the right registers are found

Changes in 22.4
===============
2007-04-11 Craig Small
	* fuser correctly parses remote tcp ports Debian #397033
	* Removed extra blank lines in fuser Debian #386564

2007-03-02  Karel Zak
	* killall <path> does textual path comparision with value of the
	  /proc/<pid>/exe link when a comparision with inode number failed.
	  The old algorithme based on inode numbers doesn't work if since
	  the process was started, the file at <path> has been replaced
	  (e.g due prelink process).

2007-03-02 Craig Small
	* Added peekfd

2007-03-02  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: Upgrade to gettext-0.16.1.